--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body{
     text-align: center;   
 }
 
-
 body > div > a,#lucky{
     text-decoration: none;
     color: black;   
@@ -83,9 +82,57 @@ button:hover{
 
 .offeredin{
     font-size: 80%;
+    margin-bottom: 5.9%;
 }
 
 .languages{
     font-size: 100%;
+}
+
+/* bottom borders */
+#india{
+    padding-left: 20px;
+    background-color: rgb(242, 242, 242);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgb(218, 220, 224);
+}
+
+#container{
+    display: flex;  
+    background-color: rgb(242, 242, 242);  
+    align-items: center;     
+}
+
+#footer {
+    position: sticky;
+    background-color: rgb(242, 242, 242);
+    color: black;
+    bottom: 0;
+}
+
+p>a{
+    text-decoration: none;
+    color: black;
+}
+
+p>a:hover{
+    text-decoration: underline;
+}
+
+.footitems{
+    padding-left:30px ;
+    font-size: 13px;
+}
+
+/* nested */
+#nested{
+    display: flex;
+    margin-left: 51%;
+}
+
+.footitems1{
+    padding-left:30px ;
+    font-size: 13px;
 }
 
