--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 } 
 
 #wholething{
-    margin-top: 5.6%;
+    margin-top: 2%;
     text-align: center;   
 }
 
@@ -19,7 +19,7 @@ body > div > a,#lucky{
     font-size: 13px;
     padding-right: 3%;
     padding-top: 1%;
-    padding-bottom: 1px;   
+    padding-bottom: 20px;   
 }
 
 #imglink:hover{
@@ -43,7 +43,8 @@ body > div > a,#lucky{
     margin: 20px;
     margin-top: 0px;  
     font-size: 13px; 
-    margin-right: 4px;                
+    margin-right: 4px;     
+    background-color: rgb(248, 249, 250);           
 }
 
 #searchbutton:hover{
@@ -52,6 +53,7 @@ body > div > a,#lucky{
 
 button{
     margin-left: 4px;
+    background-color: rgb(248, 249, 250);
 }
 
 button:hover{
@@ -94,8 +96,8 @@ button:hover{
 #india{
     padding-left: 20px;
     background-color: rgb(242, 242, 242);
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 15px;
     border-bottom: 1px solid rgb(218, 220, 224);
     font-size: 14px;
 }
