--- a/advstyle.css
+++ b/advstyle.css
@@ -51,45 +51,54 @@ body{
 
 .container{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .container0{
     display: flex;
     flex-direction: column;
-    /* padding-right: 20px; */
-    justify-content: space-around;
-    font-size: 100%;
-    /* flex-grow: 1; */
-    width: 18%;
-    padding: 0px;
-    
+    justify-content: space-between;  
+    margin-right: 10px;  
 }
 
 .container1{
     display: flex;
     flex-direction: column;
-    /* padding-right: 10px; */
-    justify-content: space-around;
-    /* flex-grow: 2.5; */
-    padding: 0px;
-    height: fit-content;
-    padding-right: 200px;
-
+    justify-content: space-between;
+    padding-right: 20px;
+    width: 40%;
 }
 
 .container2{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;    
-    margin-left: 20px;
-    padding-right: 250px;
-    padding: 0px;    
+    justify-content: space-between;  
+    width: 25%;  
+}
 
+.container3{
+    width: 100%;
+}
+
+#submitbutton{
+    background-color:rgb(71,138,248) ;
+    margin-left: 43.5%;
+    width: 148px;
+    height: 30px;
+    border: none;
+    border-radius: 3px;
+    color: whitesmoke;
+    font-weight: bold;
 }
 
 .inputbar{
-    width: 150%;
     height: 20px;
+    width: 100%;
+    outline: none;
+}
+
+.inputbar:focus{
+    border: 2px solid lightblue;
 }
 
 .hints{
@@ -100,14 +109,7 @@ body{
     font-size: 13px;
 }
 
-.containers{
-    display: flex;
-    
-}
 
-#lowerlimit{
-    width: 100%;
-}
 
 /* bottom borders */
 #india{
@@ -148,7 +150,6 @@ body{
     width: 100%;
     position: fixed;
     bottom: 0px;
-
 }
 
 p>a{
