--- a/imagesearchstyle.css
+++ b/imagesearchstyle.css
@@ -4,9 +4,11 @@ body{
 }
 
 #whole{
-    text-align: center;
-    margin-top: 5.65%;
-    margin-bottom: 12.4%;   
+    display: flex;
+    height: 80vh;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;  
 }
 
 /*top right*/
