--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@ body{
 } 
 
 #wholething{
-    margin-top: 2%;
+    display: flex;
+    height: 80vh;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;   
 }
 
